- Changed file navigator, text editor & "/plugin" to use more specific permissions.